@startuml

title __CONTROLLER's Class Diagram__\n

  namespace br.com.apibancaria {
    namespace controller {
      class br.com.apibancaria.controller.AuthController {
          + AuthController()
          + login()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace controller {
      class br.com.apibancaria.controller.ClienteController {
          + ClienteController()
          + atualizar()
          + buscar()
          + cadastro()
          + excluir()
          + lista()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace controller {
      class br.com.apibancaria.controller.ContaController {
          + ContaController()
          + buscar()
          + lista()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace controller {
      class br.com.apibancaria.controller.PixController {
          + PixController()
          + cadastrarChave()
          + excluirChave()
          + listarChaves()
          + transferencia()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace controller {
      class br.com.apibancaria.controller.TransacaoController {
          + TransacaoController()
          + deposito()
          + extrato()
          + saque()
      }
    }
  }
  

  br.com.apibancaria.controller.AuthController o-- br.com.apibancaria.service.AuthService : service
  br.com.apibancaria.controller.ClienteController o-- br.com.apibancaria.service.ClienteService : service
  br.com.apibancaria.controller.ContaController o-- br.com.apibancaria.service.ContaService : service
  br.com.apibancaria.controller.PixController o-- br.com.apibancaria.service.PixService : service
  br.com.apibancaria.controller.TransacaoController o-- br.com.apibancaria.service.TransacaoService : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
